[metadata]
name = PyCoupling
version = 0.0.1
author = Russell Carroll
author_email = russell_carroll@carrelec.com
description = A cable coupling and crosstalk tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rccarroll654/PyCoupling
project_urls =
	Bug Tracker = https://github.com/rccarroll654/PyCoupling
classifieres = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src
